Added footer and header

--- a/FilmApp-Angular/src/styles.css
+++ b/FilmApp-Angular/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing the font-awesome library. */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css');
