--- a/FilmApp-Angular/src/app/components/footer/footer.component.html
+++ b/FilmApp-Angular/src/app/components/footer/footer.component.html
@@ -1,1 +1,39 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-12 col-sm-12 col-xs-12">
+        <div class="footer_menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer_copyright">
+          <p>© 2023 UNIR - Máster Diseño y Desarrollo de Interfaz Web</p>
+        </div>
+        <div class="footer_profile">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--- END COL -->
+    </div>
+    <!--- END ROW -->
+  </div>
+  <!--- END CONTAINER -->
+</div>
