--- a/FilmApp-Angular/src/app/components/film-card/film-card.component.html
+++ b/FilmApp-Angular/src/app/components/film-card/film-card.component.html
@@ -1,1 +1,19 @@
-<p>card works!</p>
+<mat-card class="film-card">
+  <mat-card-header>
+    <mat-card-title>{{ movie.title | uppercase }}</mat-card-title>
+    <mat-card-subtitle>{{ movie.year }}</mat-card-subtitle>
+  </mat-card-header>
+  <img
+    mat-card-image
+    src="{{ movie.img }}"
+    alt="Movie Poster"
+    [ngStyle]="getBackground()"
+  />
+  <mat-card-content>
+    <p><strong>Director:</strong> {{ movie.director }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button mat-raised-button color="primary">LIKE</button>
+    <button mat-button mat-raised-button color="secondary">SHARE</button>
+  </mat-card-actions>
+</mat-card>
